@@ -19,10 +19,8 @@ plugins {
     id 'org.sonarqube' version '3.0'
 }
 
-def fileVersion = new org.yaml.snakeyaml.Yaml().load(new File("VERSION.yaml").newInputStream())
-
-group = 'uk.gov.hmcts.reform'
-version = fileVersion.TAG
+group = 'com.github.hmcts'
+version = '0.0.1'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -31,9 +29,21 @@ tasks.withType(JavaCompile) {
 }
 
 repositories {
-    maven { url "http://dl.bintray.com/hmcts/hmcts-maven/" }
     mavenLocal()
     jcenter()
+    mavenCentral()
+    maven {
+        url "http://dl.bintray.com/hmcts/hmcts-maven/"
+    }
+    maven {
+        url 'https://jitpack.io'
+    }
+    maven {
+        url "http://repo.spring.io/milestone"
+    }
+    maven {
+        url "https://repo.spring.io/libs-milestone"
+    }
 }
 
 dependencyManagement {
@@ -43,6 +53,7 @@ dependencyManagement {
 }
 
 dependencies {
+    compile group: 'com.github.hmcts', name: 'befta-fw', version: '8.2.0'
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
 
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations'
@@ -65,6 +76,12 @@ task printVersion {
     doLast {
         print project.version
     }
+}
+
+task highLevelDataSetup(type: JavaExec) {
+    main = "uk.gov.hmcts.cmc.ccd.domain.befta.HighLevelDataSetupApp"
+    classpath += sourceSets.main.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 def pomConfig = {
